# mredu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Ejemplos con MREdu.ipynb  README.md  example1.py  example2.py  example3.py  example4.py  justfile  pyproject.toml  requirements.txt  setup.py
data/: palabras.txt  quijote.txt
examples/: example1.py  example2.py  example3.py  example4.py
mredu/: __init__.py  simul.py
tests/: test_simul.py
