[project]
name = "mredu"
version = "1.0.1"
description = "A simple simulator of a system which implements map/reduce paradigm."
authors = [
    {name = "ramonpin", email = "ramon.pin@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "toolz>=0.12.0",
    "rich",
]

[project.urls]
Homepage = "http://github.com/ramonpin/mredu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "twine>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
